--- a/wp-content/themes/ankr_theme/style.css
+++ b/wp-content/themes/ankr_theme/style.css
@@ -719,7 +719,7 @@ textarea {
 .posts-navigation,
 .site-main
 .post-navigation {
-	margin: 0 0 1.5em;
+	margin: 0;
 }
 
 .comment-navigation .nav-links,
